Ajout de titres

--- a/hello.html
+++ b/hello.html
@@ -17,8 +17,16 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<!-- Description -->
 		<div>
+			<h1> Description </h1>
 			<p>Test mini me</p>
+		</div>
+		
+		<!-- Récompense -->
+		<div>
+			<h1> Récompense </h1>
+			<p>En construction</p>
 		</div>
 		
 	</body>
