--- a/hello.html
+++ b/hello.html
@@ -35,5 +35,10 @@
 			<p><script src="https://gist.github.com/eV2452/0cec3ec13e92f64573391322600da18f.js"></script></p>
 		</div>
 		
+		<!-- Commandes git -->
+		<div>
+			<h1> Mes commandes git </h1>
+			<p> git pull </p>
+		</div>
 	</body>
 </html>
