--- a/hello.html
+++ b/hello.html
@@ -26,7 +26,9 @@
 		<!-- Récompense -->
 		<div>
 			<h1> Récompense </h1>
-			<p> <img src="images/medal_bronze.png"> <img src="images/medal_silver.png"> </p>
+			<p> <img src="images/medal_bronze.png"> <img src="images/medal_silver.png"> 
+			<img src="images/medal_gold.png">
+			</p>
 		</div>
 		
 		<!-- Mon gist -->
